--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-inspect": "^0.8.7"
   },
   "homepage": "https://anumraza.github.io/Todo-App"
 }
